[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = "0.27"
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
anyhow = "1.0"
image = "0.24"
cartesian = "0.2"
